<resources>
    <string name="app_name">Easy Food</string>
    <string name="password">Password</string>
    <string name="i_forgot">I Forget</string>
    <string name="login">LOGIN</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="set_password">GET PASSWORD</string>
    <string name="todo">ImageView</string>
</resources>