<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">
    <ImageView
        android:id="@+id/logo"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/fooddelivery"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="7dp"
            android:layout_height="40dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21.5dp"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="#333232"
                android:textSize="23.3sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.3dp"
                android:text="Email Address"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />
            <EditText
                android:id="@+id/logEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textColorHint="#c2c2c2"
                android:textSize="15sp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="17.3dp"
                android:background="#9e9e9e" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17.3dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/logPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="#333232"
                    android:autofillHints="password" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="17.3dp"
                android:layout_marginBottom="27dp"
                android:background="#9e9e9e" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_below="@id/body"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:text="Sign In"
        android:textColor="@color/black"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/new_user"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/gosignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#38b5f2"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbarId"
        />
</RelativeLayout>